public/css/profile.less
/*
 * Mixins
 */
.border-radius (@radius) {
  border-radius: @radius;
  -moz-border-radius: @radius;
  -webkit-border-radius: @radius;
  -webkit-background-clip: padding;
  -moz-background-clip: padding;
  background-clip: padding-box;
}

nav.user, #topnav, #content  {
  width: 800px;
}

#content  {

  /* Content-level selectors */

  h1  {
    padding: .5em;
    line-height: 60px;
    text-align: left !important;
    vertical-align: middle;
    img  {
      padding: 2px;
      background: #FFF;
      border: 1px solid #CCC;
      vertical-align: middle;
      margin-right: .25em;
    }
  }
  #content-inner  {
    padding: 0;
  }
  #content-inner > div  {
    background: #FFF;
    padding: 0;
    .border-radius(10px);
    border-top-right-radius: 0;
    border-top-left-radius: 0;
    -moz-border-radius-topright: 0;
    -moz-border-radius-topleft: 0;
    -webkit-border-top-right-radius: 0;
    -webkit-border-top-left-radius: 0;
  }

  h2  {
    position: relative;
    top: 5px;
    left: 15px;
  }

  dl.profile  {
    padding: 15px;
    display: block;
    float: left;
    dt, dd  {
      float: left;
      padding-bottom: 10px;
    }
    dt  {
      color: #999;
      width: 125px;
      clear: left;
    }
  }

  div.recipe-container  {
    float: left;
  }

  dl.recipes  {
    padding: 15px;

    dt  {
      &.recipe  {
        min-width: 535px;
        margin-bottom: 15px;
        position: relative;
        span.srm  {
          padding: 10px 0 0 10px;
          margin-right: 15px;
          background: #55AEC7;
          display: inline-block;
          float: left;
          .border-radius(10px);
        }
        img  {
          margin: 0 10px 10px 0
        }
        div.heading  {
          overflow: hidden;
        }
        h3  {
          font-size: 1.35em;
          line-height: 1.5em;
          float: left;
        }
        h4  {
          font-weight: normal;
          font-size: 1em;
          color: #707070;
          line-height: 1em;
        }
        h4.dates  {
          font-size: .85em;
          color: #A9A9A9;
          padding-bottom: 10px;
        }
        ul.badge  {
          list-style-type: none;
          float: right;
          width: auto;
          border: 1px solid #DDD;
          .border-radius(5px);
          form  { display: inline-block; }
          li  {
            display: inline-block;
            padding: 0 10px;
            min-height: 24px;
            line-height: 24px;
            border-left: 1px solid #DDD;
            vertical-align: middle;
            &:first-child  {
              border-left: 0;
            }
            &.btn  { cursor: pointer; }
            &.copy  { background: url(/images/copy.png) 4px center no-repeat; }
            &.delete  { background: url(/images/delete.png) 4px center no-repeat; }
          }
        }
      }
    }
  }

}

